--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "@workspace/ui": "workspace:*",
     "fast-xml-parser": "^5.0.8",
     "lucide-react": "^0.475.0",
